--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    background-color: #f5f5f5;
   }
   
   h1, h2 {
-    color: #333;
+    color: #f5f5f5;
   }
   
   p {
